# some-random-api-rs

./: Cargo.toml  README.md
src/: client.rs  lib.rs  requester.rs
src/endpoints/: animal.rs  animu.rs  chatbot.rs  fact.rs  image.rs  mod.rs  others.rs  pokemon.rs  premium.rs  welcome.rs
src/endpoints/animal/: mod.rs
src/endpoints/animu/: mod.rs  structs.rs
src/endpoints/canvas/: filter.rs  misc.rs  mod.rs  overlay.rs
src/endpoints/chatbot/: mod.rs  structs.rs
src/endpoints/fact/: mod.rs  structs.rs
src/endpoints/image/: mod.rs  structs.rs
src/endpoints/others/: mod.rs
src/endpoints/pokemon/: mod.rs  structs.rs
src/endpoints/premium/: mod.rs
src/endpoints/welcome/: mod.rs
src/structs/: animal.rs  animu.rs  canvas.rs  chatbot.rs  mod.rs  others.rs  rank_card.rs  tweet.rs  welcome_image.rs
