[package]
name = "some-random-api"
description = "An asynchronous API wrapper for Some Random API."
keywords = ["api", "discord"]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/flazepe/some-random-api-rs"
license = "MIT"

[dependencies]
anyhow = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
